--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
 
-            <a class="navbar-brand" href="index.html">BRIAN DESIGNS</a>
+            <a class="navbar-brand" href="index.html">Brian Fitness</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -82,7 +82,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                                     <h6 data-aos="fade-up" data-aos-delay="300">new way to build a healthy lifestyle!</h6>
 
-                                    <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">HI MY NAME IS BRIAN ACHIRA</h1>
+                                    <h1 class="text-white" data-aos="fade-up" data-aos-delay="500">HEALTHY LIFE STARTS WITH US</h1>
 
                                     <a href="#feature" class="btn custom-btn mt-3" data-aos="fade-up" data-aos-delay="600">Get started</a>
 
@@ -103,9 +103,9 @@ https://www.tooplate.com/view/2119-gymso-fitness
                 <div class="d-flex flex-column justify-content-center ml-lg-auto mr-lg-5 col-lg-5 col-md-6 col-12">
                     <h2 class="mb-3 text-white" data-aos="fade-up">New to the gymso?</h2>
 
-                    <h6 class="mb-4 text-white" data-aos="fade-up">Your membership is up to 2 months FREE ($62.50 per month)</h6>
+                    <h6 class="mb-4 text-white" data-aos="fade-up">Your membership is up to 2 months FREE (ksh.2000 per month)</h6>
 
-                    <p data-aos="fade-up" data-aos-delay="200">Gymso is free HTML template by <a rel="nofollow" href="https://www.tooplate.com" target="_parent">Tooplate</a> for your commercial website. Bootstrap v4.2.1 Layout. Feel free to use it.</p>
+                    <p data-aos="fade-up" data-aos-delay="200">Brian Fitness is here to make your life better as we say healthy life starts here with us  .</p>
 
                     <a href="#" class="btn custom-btn bg-color mt-3" data-aos="fade-up" data-aos-delay="300" data-toggle="modal" data-target="#membershipForm">Become a member today</a>
                 </div>
