--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                                 <h2 class="mb-4 text-white" data-aos="fade-up" data-aos-delay="500">Working hours</h2>
 
-                               <strong class="d-block" data-aos="fade-up" data-aos-delay="600">Sunday : Closed</strong>
+                               <strong class="d-block" data-aos="fade-up" data-aos-delay="600">Saturday : closed</strong>
 
                                <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Monday - Friday</strong>
 
                                 <p data-aos="fade-up" data-aos-delay="800">7:00 AM - 10:00 PM</p>
 
-                                <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Saturday</strong>
+                                <strong class="mt-3 d-block" data-aos="fade-up" data-aos-delay="700">Sunday</strong>
 
-                                <p data-aos="fade-up" data-aos-delay="800">6:00 AM - 4:00 PM</p>
+                                <p data-aos="fade-up" data-aos-delay="800">6:00 AM - 4:00 AM</p>
                                </div>
                           </div>
                      </div>
