--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@ https://www.tooplate.com/view/2119-gymso-fitness
 
                                         <span><strong>Trained by</strong> - Bella</span>
 
-                                        <span class="class-price">$50</span>
+                                        <span class="class-price">ksh. 1000</span>
 
-                                        <p class="mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                                        <p class="mt-3">A relaxing class that helps yuo get a healthy body and mind</p>
                                     </div>
                                 </div>
                             </div>
