--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                     <div class="mx-auto mt-4 mt-lg-0 mt-md-0 col-lg-5 col-md-6 col-12">
                         <h2 class="mb-4" data-aos="fade-up" data-aos-delay="600">Where you can <span>find us</span></h2>
 
-                        <p data-aos="fade-up" data-aos-delay="800"><i class="fa fa-map-marker mr-1"></i> 120-240 Rio de Janeiro - State of Rio de Janeiro, Brazil</p>
+                        <p data-aos="fade-up" data-aos-delay="800"><i class="fa fa-map-marker mr-1"></i> Brian Fitness, Diamond Plaza , Donholm, Nairobi, Kenya</p>
 <!-- How to change your own map point
 	1. Go to Google Maps
 	2. Click on your location point
@@ -407,7 +407,7 @@ https://www.tooplate.com/view/2119-gymso-fitness
                <div class="row">
 
                     <div class="ml-auto col-lg-4 col-md-5">
-                        <p class="copyright-text">Copyright &copy; 2020 Brian Fitness Co.
+                        <p class="copyright-text">Copyright &copy; 2021 Brian Fitness Co.
                         
                         <br>Design: <a href="https://rodgersafrica.netlify.app/">Rodgers Ndocha in collaboration with Brian Achira</a></p>
                     </div>
@@ -415,10 +415,10 @@ https://www.tooplate.com/view/2119-gymso-fitness
                     <div class="d-flex justify-content-center mx-auto col-lg-5 col-md-7 col-12">
                         <p class="mr-4">
                             <i class="fa fa-envelope-o mr-1"></i>
-                            <a href="#">Brian Fitness@yahoo.co</a>
+                            <a href="#">brianfitness@yahoo.com</a>
                         </p>
 
-                        <p><i class="fa fa-phone mr-1"></i> 0712345678</p>
+                        <p><i class="fa fa-phone mr-1"></i> +254721286945</p>
                     </div>
                     
                </div>
